tests/toylang/neg/001196_mutation.toylang
program a = { program a = { } . var a : bool; } .
